# Img2ASCIIArt

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
